// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem component Renders correct fruit details - 1 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-lk0ebk-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-18e91k1-MuiCardMedia-root"
    role="img"
    style={
      {
        "backgroundImage": "url("image.jpeg")",
      }
    }
    title="Fruit"
  />
  <div
    className="MuiCardContent-root css-14t07bv-MuiCardContent-root"
  >
    <div
      className="MuiStack-root css-1tc234f-MuiStack-root"
    >
      <h5
        className="MuiTypography-root MuiTypography-h5 css-1hkt7f5-MuiTypography-root"
      >
        <a
          color="inherit"
          href="/fruit/1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "textDecoration": "none",
            }
          }
        >
          Fruit (2
              Nos)
        </a>
      </h5>
      <span
        className="MuiTypography-root MuiTypography-caption css-qss0wv-MuiTypography-root"
      >
        14% off
      </span>
      <div
        className="MuiStack-root css-1f7x521-MuiStack-root"
      >
        <span
          className="MuiTypography-root MuiTypography-body1 css-b02fjb-MuiTypography-root"
        >
          ₹
          30
        </span>
        <span
          className="MuiTypography-root MuiTypography-body2 css-qc7gyi-MuiTypography-root"
        >
          ₹
          35
        </span>
      </div>
      <div
        className="MuiStack-root css-w62c0k-MuiStack-root"
      >
        <button
          aria-label="Remove one item"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="RemoveCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
            />
          </svg>
        </button>
        <p
          className="MuiTypography-root MuiTypography-body1 css-b02fjb-MuiTypography-root"
        >
          1
        </p>
        <button
          aria-label="Add one item"
          className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AddCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <span
      className="MuiTypography-root MuiTypography-body1 css-b6p50a-MuiTypography-root"
    >
      ₹
      30
    </span>
  </div>
</div>
`;

exports[`CartItem component Renders correct fruit details - 2 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-lk0ebk-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-18e91k1-MuiCardMedia-root"
    role="img"
    style={
      {
        "backgroundImage": "url("img.jpeg")",
      }
    }
    title="Apple"
  />
  <div
    className="MuiCardContent-root css-14t07bv-MuiCardContent-root"
  >
    <div
      className="MuiStack-root css-1tc234f-MuiStack-root"
    >
      <h5
        className="MuiTypography-root MuiTypography-h5 css-1hkt7f5-MuiTypography-root"
      >
        <a
          color="inherit"
          href="/fruit/1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "textDecoration": "none",
            }
          }
        >
          Apple (2
              Nos)
        </a>
      </h5>
      <span
        className="MuiTypography-root MuiTypography-caption css-qss0wv-MuiTypography-root"
      >
        14% off
      </span>
      <div
        className="MuiStack-root css-1f7x521-MuiStack-root"
      >
        <span
          className="MuiTypography-root MuiTypography-body1 css-b02fjb-MuiTypography-root"
        >
          ₹
          30
        </span>
        <span
          className="MuiTypography-root MuiTypography-body2 css-qc7gyi-MuiTypography-root"
        >
          ₹
          35
        </span>
      </div>
      <div
        className="MuiStack-root css-w62c0k-MuiStack-root"
      >
        <button
          aria-label="Remove one item"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="RemoveCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          className="MuiTypography-root MuiTypography-body1 css-b02fjb-MuiTypography-root"
        >
          1
        </p>
        <button
          aria-label="Add one item"
          className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AddCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <span
      className="MuiTypography-root MuiTypography-body1 css-b6p50a-MuiTypography-root"
    >
      ₹
      30
    </span>
  </div>
</div>
`;

exports[`CartItem component Renders error state 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1hdyuqk-MuiPaper-root-MuiAlert-root"
  role="alert"
>
  <div
    className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
      data-testid="ErrorOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message css-1pxa9xg-MuiAlert-message"
  >
    Error loading item!
  </div>
</div>
`;

exports[`CartItem component Renders loading state 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardInfo MuiAlert-standard css-1fuz9qr-MuiPaper-root-MuiAlert-root"
  role="alert"
>
  <div
    className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
      data-testid="InfoOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message css-1pxa9xg-MuiAlert-message"
  >
    Loading item...
  </div>
</div>
`;
